[package]
name = "asm65"
version = "0.1.0"
authors = ["Erik Gilling <konkers@konkers.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
failure = "0.1.8"
lazy_static = "1.4.0"
nom = "6"
nom_locate = "3.0.0"
num-traits = "0.2.12"
strum = {version="0.18.0", features=["derive"]}